k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-care-ui
  labels:
    app: smart-care-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: smart-care-ui
